Remove emojis: replaced with professional SVG icons

--- a/style.css
+++ b/style.css
@@ -1003,3 +1003,10 @@ h1 {
     animation-delay: 1s;
 }
 
+
+/* Feature icon SVG styling */
+.feature-icon svg {
+    width: 28px;
+    height: 28px;
+}
+
